--- a/xt6infra/site.yml
+++ b/xt6infra/site.yml
@@ -7,10 +7,8 @@
 - name: Instala utiles y paquetes basicos
   hosts: docker_local
   remote_user: carlos
-  become: true
+  become: false
 
   roles:
     - utiles
     
-
-
