--- a/xt6infra/utiles/tasks/main.yml
+++ b/xt6infra/utiles/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 # Instala las herramientas de base el server
 
+- name: Instalar dependencias para el apt y fixear el update 
+  command: /usr/bin/apt-get clean
+
 - name: Instalar repos adicionales para Ubuntu 18
   apt_repository:
     repo: deb http://archive.ubuntu.com/ubuntu bionic universe
@@ -19,6 +22,7 @@
       - python3-mysqldb
       - python3-pymysql
       - rrdtool
+      - htop
       - whois
       - mtr-tiny
       - vim-tiny
