--- a/xt6infra/Makefile
+++ b/xt6infra/Makefile
@@ -2,5 +2,8 @@ build:
 	docker build -t ansible_ubuntu:bionic .
 
 run:
-	docker rm happy-everafter ;
-	docker run -ti --name happy-everafter ansible_ubuntu:bionic
+	-docker rm happy-everafter;
+	docker run -d --name happy-everafter ansible_ubuntu:bionic sleep 600 
+
+provision: 
+	./mk
