--- a/xt6infra/Vagrantfile
+++ b/xt6infra/Vagrantfile
@@ -20,6 +20,7 @@ Vagrant.configure("2") do |config|
   config.vm.box_check_update = false
 
   config.vm.network "forwarded_port", guest: 3000, host: 3000, host_ip: "127.0.0.1"
+  config.vm.network "forwarded_port", guest: 8086, host: 8086, host_ip: "127.0.0.1"
 
   config.vm.provision "ansible" do |ansible|
     ansible.playbook = "site.yml"
