agregue el rol de pre prod xt6

--- a/ansible_lab/site.yml
+++ b/ansible_lab/site.yml
@@ -6,7 +6,9 @@
 
 - name: Instala utiles y paquetes basicos
   hosts: all
+  remote_user: vagrant
   become: true
 
   roles:
     - utiles
+    - grafana_influx
