--- a/xt6infra/user_maint/tasks/main.yml
+++ b/xt6infra/user_maint/tasks/main.yml
@@ -21,7 +21,7 @@
   loop:
     - carlos
 
-- name: asegurar que la clave publica de ssh esta subida
+- name: asegurar que la clave publica de ssh esta subida para carlos
   authorized_key:
       user: carlos
       key: '{{ item }}'
@@ -30,5 +30,11 @@
      - files/carlosm-lacnic-rsa.pub
      - files/carlosm-lacnic-ed25519.pub
 
-
-
+- name: asegurar que la clave publica de ssh esta subida para root
+  authorized_key:
+      user: root
+      key: '{{ item }}'
+      state: present
+  with_file:
+     - files/carlosm-lacnic-rsa.pub
+     - files/carlosm-lacnic-ed25519.pub
