--- a/xt6infra/utiles/tasks/main.yml
+++ b/xt6infra/utiles/tasks/main.yml
@@ -26,6 +26,7 @@
       - snmpd
       - software-properties-common
       - sudo
+      - tmux
     update_cache: yes
 
 - name: Copia la configuracion de SNMP
