--- a/install_recursive_dns/Vagrantfile
+++ b/install_recursive_dns/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure("2") do |config|
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
   config.vm.box = "ubuntu/bionic64"
+  # config.vm.box = "ubuntu/xenial64"
 
   # Disable automatic box update checking. If you disable this, then
   # boxes will only be checked for updates when the user runs
@@ -30,6 +31,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.provision "shell", inline: <<-SHELL
     echo "¡MAQUINA LISTA!"
+    echo " "
+    ps aux | grep bind
   SHELL
 
 end
