--- a/install_recursive_dns/configure_bind/files/named.conf
+++ b/install_recursive_dns/configure_bind/files/named.conf
@@ -1,10 +1,34 @@
 options { 
-    directory "/home/bind9"; 
-    notify no;
-	allow-recursion {127.0.0.1; ::1; 172.17.0.0/16; 192.168.0.0/16;};
-	listen-on port 53 { any; };
-	listen-on-v6 port 53 { none; }; 
+        directory "/home/bind9"; 
+        notify no;
+        allow-recursion {127.0.0.1; ::1; localnets; };
+        listen-on port 53 { any; };
+        listen-on-v6 port 53 { none; }; 
+        allow-notify { lacnic_nets; };
+        allow-transfer { lacnic_nets; };
 };
+
+acl "lacnic_nets" {
+        2001:13c7:4001::/48;
+        200.58.128.248/29;
+        45.6.248.0/22;
+        45.6.252.0/22;
+        170.247.168.0/22;
+        168.121.184.0/22;
+        200.0.86.0/23;
+        179.0.156.0/22;
+        190.112.52.0/22;
+        200.10.62.0/23;
+        200.10.60.0/23;
+        200.7.86.0/23;
+        200.0.88.0/24;
+        200.3.12.0/22;
+        200.7.84.0/23;
+        162.242.213.105; //ns3.labs , stratus
+        2001:4802:7801:102:be76:4eff:fe20:9fc7; // ns3.labs        
+};
+
+include "etc/named.logging.conf";
 
 zone "." in {
         type hint;
@@ -14,29 +38,29 @@ zone "." in {
 zone "labs.lacnic.net" {
         type slave;
         file "var/zones/cache.labs.lacnic.net";
-        masters { 200.7.84.5; 2001:13c7:7001:4000::5; 200.7.84.10; 2001:13c7:7001:4000::10; };
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
 
 zone "labs.lacnog.org" {
         type slave;
         file "var/zones/cache.labs.lacnog.org";
-        masters { 200.7.84.5; 2001:13c7:7001:4000::5; 200.7.84.10; 2001:13c7:7001:4000::10; };
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
 
 zone "dev.lacnic.net" {
         type slave;
         file "var/zones/cache.dev.lacnic.net";
-        masters { 200.7.84.5; 2001:13c7:7001:4000::5; 200.7.84.10; 2001:13c7:7001:4000::10; };
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
 
 zone "gad.lacnic.net" {
         type slave;
         file "var/zones/cache.gad.lacnic.net";
-        masters { 200.7.84.5; 2001:13c7:7001:4000::5; 200.7.84.10; 2001:13c7:7001:4000::10; };
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
 
 zone "evento.lacnic.net" {
         type slave;
         file "var/zones/cache.evento.lacnic.net";
-        masters { 200.7.84.5; 2001:13c7:7001:4000::5; 200.7.84.10; 2001:13c7:7001:4000::10; };
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
