--- a/install_recursive_dns/users_and_packages/tasks/main.yml
+++ b/install_recursive_dns/users_and_packages/tasks/main.yml
@@ -6,31 +6,28 @@
 - name: Instalar dependencias para el apt y fixear el update 
   shell: | 
      /usr/bin/apt clean && /usr/bin/apt update
-     apt-get -y install python3.6
-     apt-get -y --reinstall install python3-apt
-     ln -sf /usr/bin/python3.6 /usr/bin/python
+#     apt-get -y install python3.6
   args:
     executable: /bin/sh
 
-- name: Instalar repos adicionales para Ubuntu 18
-  apt_repository:
-    repo: deb http://archive.ubuntu.com/ubuntu bionic universe
-    state: present
+# - name: Instalar repos adicionales para Ubuntu 18
+#   apt_repository:
+#     repo: deb http://archive.ubuntu.com/ubuntu bionic universe
+#     state: present
 
-- name: Create symbolic link de python -> python3.6
-  file:
-    src: /usr/bin/python3.6
-    dest: /usr/bin/python
-    owner: root
-    group: root
-    state: link 
+# - name: Create symbolic link de python -> python3.6
+#   file:
+#     src: /usr/bin/python3.6
+#     dest: /usr/bin/python
+#     owner: root
+#     group: root
+#     state: link 
 
 - name: Instalar dependencias para el server
   apt: 
     pkg: 
       - bind9
       - bind9utils
-      - bindgraph
       - bind9-host
       - sudo
     update_cache: yes
