--- a/xt6infra/utiles/tasks/main.yml
+++ b/xt6infra/utiles/tasks/main.yml
@@ -27,6 +27,7 @@
       - software-properties-common
       - sudo
       - tmux
+      - net-tools
     update_cache: yes
 
 - name: Copia la configuracion de SNMP
