listen on v6 para el dns recursivo

--- a/install_recursive_dns/configure_bind/files/named.conf
+++ b/install_recursive_dns/configure_bind/files/named.conf
@@ -3,7 +3,7 @@ options {
         notify no;
         allow-recursion {127.0.0.1; ::1; localnets; };
         listen-on port 53 { any; };
-        listen-on-v6 port 53 { none; }; 
+        listen-on-v6 port 53 { any; }; 
         allow-notify { lacnic_nets; };
         allow-transfer { lacnic_nets; };
 };
