--- a/install_recursive_dns/configure_bind/files/named.conf
+++ b/install_recursive_dns/configure_bind/files/named.conf
@@ -64,3 +64,9 @@ zone "evento.lacnic.net" {
         file "var/zones/cache.evento.lacnic.net";
         masters { 168.121.184.2; 2001:13c7:7001:110::2; };
 };
+
+zone "training.lacnic.net" {
+        type slave;
+        file "var/zones/cache.training.lacnic.net";
+        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
+};
