--- a/install_ispconfig/Vagrantfile
+++ b/install_ispconfig/Vagrantfile
@@ -25,7 +25,8 @@ Vagrant.configure("2") do |config|
 
   config.vm.network "forwarded_port", guest: 3000, host: 3000, host_ip: "127.0.0.1"
   config.vm.network "forwarded_port", guest: 53, host: 9053, host_ip: "127.0.0.1"
-  config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+  config.vm.network "forwarded_port", guest: 80, host: 9080, host_ip: "127.0.0.1"
+  config.vm.network "forwarded_port", guest: 8080, host: 8080, host_ip: "127.0.0.1"
   config.vm.network "forwarded_port", guest: 443, host: 8453, host_ip: "127.0.0.1"
   config.vm.network "forwarded_port", guest: 110, host: 9110, host_ip: "127.0.0.1"
   config.vm.network "forwarded_port", guest: 143, host: 9143, host_ip: "127.0.0.1"
@@ -40,6 +41,8 @@ Vagrant.configure("2") do |config|
     echo "¡MAQUINA LISTA!"
     echo " "
     ps aux | grep bind
+    echo " "
+    ps aux | grep apache
   SHELL
 
 end
