--- a/install_ispconfig/users_and_packages/tasks/main.yml
+++ b/install_ispconfig/users_and_packages/tasks/main.yml
@@ -17,6 +17,7 @@
       - bind9-host
       - sudo
       - linux-image-extra-virtual
+      - cerbot 
     update_cache: yes
 
 - name: Copia archivos de configuración varios
