--- a/install_ispconfig/users_and_packages/tasks/main.yml
+++ b/install_ispconfig/users_and_packages/tasks/main.yml
@@ -17,7 +17,7 @@
       - bind9-host
       - sudo
       - linux-image-extra-virtual
-      - cerbot 
+      - certbot 
     update_cache: yes
 
 - name: Copia archivos de configuración varios
