--- a/install_ispconfig/inoxio.ispconfig3/vars/main.yml
+++ b/install_ispconfig/inoxio.ispconfig3/vars/main.yml
@@ -6,13 +6,14 @@ ispconfig_patch_version: '2.11'
 php_version: '7.2'
 jailkit_version: '2.20'
 
-mail_admin_email: host@xt6.us
-mail_base_domain: xt6.us
+mail_admin_email: mailman@atl02.xt6.us
+mail_base_domain: atl02.xt6.us
+mail_admin_password: cocoliso123
 
 ispconfig_hostname: atl02.xt6.us
 ispconfig_admin_password: cocoliso123
 
-roundcube_hostname: atl02.xt6.us 
+roundcube_hostname: roundcube.xt6.us 
 roundcube_admin_password: admin
 
 phpmyadmin_hostname: localhost
