--- a/install_elk_stack/users_and_packages/tasks/main.yml
+++ b/install_elk_stack/users_and_packages/tasks/main.yml
@@ -20,6 +20,9 @@
       - net-tools
       - curl
       - wget
+      - gnupg2
+      - htop
+    dpkg_options: 'force-confold'
     update_cache: yes
 
 # - name: Copia archivos de configuración varios
