--- a/xt6infra/site.yml
+++ b/xt6infra/site.yml
@@ -7,19 +7,21 @@
 - name: Actualiza usuarios y claves ssh para TODOS
   hosts: proxmox_cluster, proxmox_vms, proxmox_cts, external_vms
   become: true
+  tags: xt6users
   roles:
     - user_maint
 
 - name: Instala utiles y paquetes basicos para TODOS
   hosts: proxmox_cluster, proxmox_vms, proxmox_cts, external_vms
   become: true
+  tags: xt6utiles
   roles:
    - utiles
 
 - name: Actualiza los paquetes para todos menos para los nodos hw del cluster
   hosts: proxmox_vms, proxmox_cts, proxmox_cts_turnkey, external_vms
   become: true
-  tags: pkgupdate
+  tags: xt6pkgupdate
   roles:
     - pkg_update
 
