--- a/xt6infra/user_maint/tasks/main.yml
+++ b/xt6infra/user_maint/tasks/main.yml
@@ -10,8 +10,7 @@
     - sudo
     - carlos
 
-
-- name: Crear usuarios carlos,sa
+- name: Crear usuarios carlos,sadm
   user: 
     name: "{{ item }}"
     state: present
@@ -20,6 +19,7 @@
     append: yes
   loop:
     - carlos
+    - sadm
 
 - name: asegurar que la clave publica de ssh esta subida para carlos
   authorized_key:
@@ -31,11 +31,19 @@
      - files/carlosm-lacnic-ed25519.pub
      - files/id_automation_nopass.pub
 
-- name: asegurar que la clave publica de ssh esta subida para sa
+- name: asegurar que la clave publica de ssh esta subida para sadm
+  authorized_key:
+      user: sadm
+      key: '{{ item }}'
+      state: present
+  with_file:
+     - files/id_automation_nopass.pub
+
+- name: asegurar que la clave publica de ssh sin pass no esta subida para carlos
   authorized_key:
       user: carlos
       key: '{{ item }}'
-      state: present
+      state: absent
   with_file:
      - files/id_automation_nopass.pub
 
