agregado taller de dnssec lac dns week 2020

--- a/install_slave_dns/configure_bind/files/named.conf
+++ b/install_slave_dns/configure_bind/files/named.conf
@@ -3,6 +3,7 @@ options {
         notify no;
         allow-recursion {127.0.0.1; ::1; localnets; };
         listen-on port 53 { any; };
+        listen-on port 5300 { any; };
         listen-on-v6 port 53 { any; }; 
         allow-notify { lacnic_nets; };
         allow-transfer { lacnic_nets; };
@@ -28,45 +29,13 @@ acl "lacnic_nets" {
         2001:4802:7801:102:be76:4eff:fe20:9fc7; // ns3.labs        
 };
 
-include "etc/named.logging.conf";
-
 zone "." in {
         type hint;
         file "etc/db.root";
 };
 
-zone "labs.lacnic.net" {
-        type slave;
-        file "var/zones/cache.labs.lacnic.net";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
+include "etc/named.logging.conf";
 
-zone "labs.lacnog.org" {
-        type slave;
-        file "var/zones/cache.labs.lacnog.org";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
+include "etc/named.masters.conf";
+// include "etc/named.slaves.conf";
 
-zone "dev.lacnic.net" {
-        type slave;
-        file "var/zones/cache.dev.lacnic.net";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
-
-zone "gad.lacnic.net" {
-        type slave;
-        file "var/zones/cache.gad.lacnic.net";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
-
-zone "evento.lacnic.net" {
-        type slave;
-        file "var/zones/cache.evento.lacnic.net";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
-
-zone "training.lacnic.net" {
-        type slave;
-        file "var/zones/cache.training.lacnic.net";
-        masters { 168.121.184.2; 2001:13c7:7001:110::2; };
-};
